Fixed overflow frontend issue in Owned Items, there is now a scrollbar

--- a/pro-typer/src/OwnedItems.css
+++ b/pro-typer/src/OwnedItems.css
@@ -18,9 +18,10 @@
   border-radius: 15px;
   box-shadow: 0 4px 24px rgba(0, 0, 0, 0.5);
   row-gap: 20px;
-  min-height: 330px;
+  min-height: 400px;
   min-width: 600px;
   width: 600px;
+  height: 400px;
 }
 
 .button-container2 {
@@ -81,6 +82,8 @@
   column-gap: 25px;
   row-gap: 30px;
   width: 100%;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .owned-item {
